# WebPhonon-Qt5

./: CMakeLists.txt  Icons.qrc  LICENSE  README.md  WebPhonon-Qt5.1  WebPhonon-Qt5.desktop  WebPhonon-Qt5.pro  addmoviedialog.cpp  addmusicdialog.cpp  addmvdialog.cpp  addtvdialog.cpp  dbmainwindow.cpp  dialog.cpp  dropwidget.cpp  dropwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  snapcraft.yaml  webphonon.sqlite3
.github/: FUNDING.yml
debian/: changelog  control  control~
icons/: CMakeLists.txt  PlayWithWebPhonon-Qt5.desktop
src/: CMakeLists.txt  README.md  WebPhonon-Qt5.pro
src/debian/: changelog~
src/icons/: WebPhonon-Qt5.desktop
