project (WebPhonon-Qt5)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(REQUIRED_QT_VERSION 5.2.0)
cmake_policy(SET CMP0063 NEW)
find_package(Qt5 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Core Gui Widgets)
#find_package(Qt5Core REQUIRED)
#find_package(Qt5Gui REQUIRED)
#find_package(Qt5Widgets REQUIRED)
find_package(ECM REQUIRED NO_MODULE)
find_package(Phonon4Qt5 REQUIRED)

set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
include(ECMPackageConfigHelpers)
include(ECMSetupVersion)
include(ECMGenerateHeaders)
include(KDEInstallDirs)
include(KDECMakeSettings)
include(KDECompilerSettings)
include(FeatureSummary)
#find_package(KDE4 REQUIRED)
#include (KDE4Defaults)
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${PHONON_INCLUDE_DIR})
#INCLUDE(${QT_USE_FILE})
#ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_SUBDIRECTORY(icons)
SET(WebPhonon-Qt5_SOURCES main.cpp mainwindow.cpp dropwidget.cpp )
SET(WebPhonon-Qt5_HEADERS mainwindow.h dropwidget.h)
SET(WebPhonon-Qt5_FORMS mainwindow.ui)
SET(WebPhonon-Qt5_RESOURCES Icons.qrc)
SET(WebPhonon-Qt5_SPLASH WebPhonon-Master-text2.png)


#set(WebPhononSources icons/hi16-app-WebPhonon.png icons/hi32-app-WebPhonon.png icons/hi48-app-WebPhonon.png icons/hi64-app-WebPhonon.png icons/hi128-app-WebPhonon.png icons/hi256-app-WebPhonon.png icons/hi512-app-WebPhonon.png)
#QT5_AUTOMOC(${WebPhonon-Qt5_SOURCES})
#QT5_WRAP_CPP(WebPhonon-Qt5_HEADERS_MOC ${WebPhonon-Qt5_HEADERS})
qt5_wrap_ui(WebPhonon-Qt5_FORMS_HEADERS ${WebPhonon-Qt5_FORMS})
qt5_add_resources(WebPhonon-Qt5_RESOURCES_RCC ${WebPhonon-Qt5_RESOURCES})

#kde4_add_app_icon(WebPhononSources "icons/hi*-apps-WebPhonon.png")

add_executable(WebPhonon-Qt5 ${WebPhonon-Qt5_SOURCES} ${WebPhonon-Qt5_FORMS_HEADERS} ${WebPhonon-Qt5_RESOURCES_RCC})
target_link_libraries(WebPhonon-Qt5 Qt5::Widgets Qt5::Core Qt5::Gui ${PHONON_LIBRARY})
install(TARGETS WebPhonon-Qt5 ${INSTALL_TARGETS_DEFAULT_ARGS})
INSTALL(FILES ${WebPhonon-Qt5_SPLASH} DESTINATION share/WebPhonon-Qt5/splash)
#INSTALL( PROGRAMS WebPhonon.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
#INSTALL(FILES ${WebPhononSources} DESTINATION ${DATA_INSTALL_DIR}/WebPhonon)
