find_package(ECM REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
include(KDEInstallDirs)
include(ECMInstallIcons)
include(KDECMakeSettings)
install(PROGRAMS WebPhonon-Qt5.desktop DESTINATION ${SHARE_INSTALL_PREFIX}/applications)
install(FILES PlayWithWebPhonon-Qt5.desktop DESTINATION ${SERVICES_INSTALL_DIR}/ServiceMenus)
ecm_install_icons(${ICON_INSTALL_DIR})
#kde4_UPDATE_ICONCACHE()
