find_package(ECM REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
include(KDEInstallDirs)
include(ECMInstallIcons)
include(KDECMakeSettings)
install(PROGRAMS WebPhonon-Qt5.desktop DESTINATION ${SHARE_INSTALL_PREFIX}/applications)
install (FILES PlayWithWebPhonon-Qt5.desktop DESTINATION ${SERVICES_INSTALL_DIR}/ServiceMenus)
ecm_install_icons(ICONS 128-apps-WebPhonon-Qt5.png 16-apps-WebPhonon-Qt5.png 256-apps-WebPhonon-Qt5.png 32-apps-WebPhonon-Qt5.png 48-apps-WebPhonon-Qt5.png 512-apps-WebPhonon-Qt5.png 64-apps-WebPhonon-Qt5.png DESTINATION ${ICON_INSTALL_DIR})
#ecm_install_icons(${ICON_INSTALL_DIR} en)
#kde4_UPDATE_ICONCACHE()
